2025-09-11  Zhengyi Fu  <i@fuzy.me>

	Refactor gptel file editing tools for better reliability and user experience.

	* site-lisp/gptel-config.el: Replace complex edit_file tool with simpler
	str_replace and insert tools.
	(+gptel-edit-file-async): Remove complex edit function.
	(+gptel-string-replace-async): New function for simple string replacement.
	(+gptel-insert-async): New function for inserting text at specific line.
	(str_replace): New tool for exact string replacement with simplified description.
	(insert): New tool for line-based insertion.
	Update coding-agent preset to use new tools.
	Fix read_file documentation to clarify that end parameter uses -1 for end of file.
	Simplify write_file description by removing redundant ediff interface details.


2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Refactor gptel tools with improved user interface and error handling.

	* site-lisp/gptel-config.el: Extract run_command to separate function
	(+gptel-run-command-async): New function to handle command execution.
	(+gptel--popup-1): New function for interactive popup menus with key
	description parsing.
	(+gptel--popup): New macro for creating popup menus with comprehensive
	docstring.
	(+gptel-ediff-file-with-buffer): Replace read-answer with custom popup
	interface for better user experience.
	(+gptel-with-url-retrieve): Improve error handling with nested
	condition-case.
	(edit_file): Rename parameter from file-path to file_path for consistency.
	(write_file): Rename parameter from file-path to file_path for consistency.
	(run_command): Use extracted function for better code organization.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Configure TRAMP connection profiles for remote shell access.

	* init.el: Add connection-local profile for remote-explicit-shell-file-name
	to ensure /bin/bash is used for SSH and SCP connections via TRAMP.

2025-09-10  Zhengyi Fu  <i@fuzy.me>

	Improve gptel write_file tool with ediff interface and fix project-root warnings.
